scrollreveal.js flicker fix

--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,6 @@ footer {
 .filler {
   height: 500px
 }
+
+/* avoid flicker*/
+.sr .fooReveal { visibility: hidden; }
